--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -464,7 +464,7 @@
                         <img class="program-photo" [src]="(program.assets && program.assets.length && program.assets[0]) | background: program._id" />
                       </div>
                     </ion-card-header>
-                    <div class="program-name">{{program.matrix_string[0][0]}}</div>
+                    <div id="{{program.matrix_string[0][0]}}" class="program-name">{{program.matrix_string[0][0]}}</div>
                   </ion-card>
                 </ion-col>
               </ion-row>
