added spec to select elipses in manage feature and delete community in spec

--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -152,7 +152,7 @@
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col class="ion-align-self-center">
             <ion-item lines="none">
-              <div style="font-size: 14px" class="ion-text-wrap">Choose one to begin inviting leaders and members:</div>
+              <div id="chooseProgramText" style="font-size: 14px" class="ion-text-wrap">Choose one to begin inviting leaders and members:</div>
             <div tabindex="0"></div></ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
