Kevin tolentino e2e create delete community (#168)
* created create-delete-community e2e spec file and pasted initial login spec as Ted Ho

* added spec to click invite menu toggle with inviteLabel id made

* finished spec to click create card by clicking community card with communityCard Id and the create card

* (1) added method to enter text input to ion-textarea; (2) added part of spec to fill out community info; (3) added name attribute to ion-textarea to input community name info

* added ids to procession buttons for create feature page

* working on clearDescription method

* implemented async keyword to createfeature click buttons and implemented clear method to proceed with create community

* added id name to each community program card to check for created e2e community for spec

* added spec to select elipses in manage feature and delete community in spec

* added id's to createFeature prompts and buttons in order to implement elementIsPresent methods to improve button clicking across spec

* added not to enterNewCommunityDescription method and replaced browser.sleep with pickfeature.waitUntilVisible(); for third spec

* added config file for community spec test and finalized files after rebase

* added Create and Delete a Community to travis file

--- a/src/app/pages/feature/createfeature/createfeature.page.html
+++ b/src/app/pages/feature/createfeature/createfeature.page.html
@@ -1,7 +1,7 @@
 <ion-header id="createfeature-header">
   <ion-toolbar *ngIf="resource && resource._id && moment.resource && moment.resource.field">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button id="backButton" (click)="closeModal(false)"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title class="ion-text-wrap">{{moment.matrix_string[0][0] || 'Create Community'}}</ion-title>
   </ion-toolbar>
@@ -19,7 +19,7 @@
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none">
               <div class="moment-label" slot="start"><ion-icon class="side-icon" color="grey" name="brush"></ion-icon></div>
-              <ion-textarea [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10000)][0]" rows="1" [minRows]="1" [maxRows]="2" autosize autocorrect="on" [placeholder]="moment.resource['en-US'].value[0] + ' ' + moment.resource['en-US'].matrix_string[0][1]" ></ion-textarea>
+              <ion-textarea id="communityName" name="communityName" [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10000)][0]" rows="1" [minRows]="1" [maxRows]="2" autosize autocorrect="on" [placeholder]="moment.resource['en-US'].value[0] + ' ' + moment.resource['en-US'].matrix_string[0][1]" ></ion-textarea>
             <div tabindex="0"></div></ion-item>
           </ion-col>
         </ion-row>
@@ -30,7 +30,7 @@
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col class="ion-align-self-center">
             <ion-item lines="none">
-              <div style="font-size: 14px" class="ion-text-wrap">Add a Program to Your Community:</div>
+              <div id="addProgramPrompt" style="font-size: 14px" class="ion-text-wrap">Add a Program to Your Community:</div>
             <div tabindex="0"></div></ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
@@ -76,7 +76,7 @@
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none"> <!--Description-->
               <ion-label class="summary-label">Description:</ion-label>
-              <ion-textarea rows="1" [minRows]="1" [maxRows]="5" autosize class="ion-text-start ion-text-wrap" [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10010)][0]"></ion-textarea>
+              <ion-textarea id="communityDescription" name="communityDescription" rows="1" [minRows]="1" [maxRows]="5" autosize class="ion-text-start ion-text-wrap" [(ngModel)]="moment.matrix_string[moment.resource.matrix_number[0].indexOf(10010)][0]"></ion-textarea>
             <div tabindex="0"></div></ion-item>
             <ion-item lines="none" *ngIf="moment.assets?.length">
               <ion-label class="summary-label">Media:</ion-label>
@@ -152,7 +152,7 @@
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col class="ion-align-self-center">
             <ion-item lines="none">
-              <div style="font-size: 14px" class="ion-text-wrap">Choose one to begin inviting leaders and members:</div>
+              <div id="chooseProgramText" style="font-size: 14px" class="ion-text-wrap">Choose one to begin inviting leaders and members:</div>
             <div tabindex="0"></div></ion-item>
             <ion-grid>
               <ion-row class="ion-justify-content-center ion-align-items-center">
@@ -199,20 +199,20 @@
 <ion-footer>
   <ion-toolbar *ngIf="resource && resource._id && moment.resource && moment.resource.field && view === 'create'">
     <ion-row>
-      <ion-button *ngIf="!createReachedEnd" expand="full" shape="round" class="centered" (click)="clickNextButton('next')">
+      <ion-button id="nextButton" *ngIf="!createReachedEnd" expand="full" shape="round" class="centered" (click)="clickNextButton('next')">
         <div>{{resource['en-US'].value[38]}}</div>
       </ion-button>
-      <ion-button *ngIf="createReachedEnd" expand="full" shape="round" class="centered" (click)="saveStep1()" [disabled]="!moment.matrix_string[0][0]">
+      <ion-button id="saveButton" *ngIf="createReachedEnd" expand="full" shape="round" class="centered" (click)="saveStep1()" [disabled]="!moment.matrix_string[0][0]">
         {{resource['en-US'].value[39]}}
       </ion-button>
     </ion-row>
   </ion-toolbar>
   <ion-toolbar *ngIf="resource && resource._id && moment.resource && moment.resource.field && view === 'tutorial' && moment._id">
     <ion-row>
-      <ion-button *ngIf="!tutorialReachedEnd" expand="full" shape="round" class="centered" (click)="clickNextButton('next')">
+      <ion-button id="tutorialNext" *ngIf="!tutorialReachedEnd" expand="full" shape="round" class="centered" (click)="clickNextButton('next')">
         <div>{{resource['en-US'].value[38]}}</div>
       </ion-button>
-      <ion-button *ngIf="tutorialReachedEnd" expand="full" shape="round" class="centered" (click)="completeSetup(true)">
+      <ion-button id="tutorialDone" *ngIf="tutorialReachedEnd" expand="full" shape="round" class="centered" (click)="completeSetup(true)">
         {{resource['en-US'].value[40]}}
       </ion-button>
     </ion-row>
