migrate assets to backblaze, update dependencies

--- a/src/app/pages/user/recover/recover.page.scss
+++ b/src/app/pages/user/recover/recover.page.scss
@@ -2,7 +2,7 @@ app-recover {
 
   ion-content {
     min-height: 100vh;
-    //--background: url('https://wee.nyc3.digitaloceanspaces.com/app/restvo_tent_background.jpg'); //assets/img/mobile-onboarding-main.jpg')
+    //--background: url('https://d2z4pehxidbzz4.cloudfront.net/app/restvo_tent_background.jpg'); //assets/img/mobile-onboarding-main.jpg')
     /*--background-size: cover;*/
   }
 
